--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "2.1.8",
     "@uiw/react-md-editor": "^4.0.4",
+    "axios": "^1.7.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.26.2"
