--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@material-tailwind/react": "2.1.8",
+    "@testing-library/react": "^16.1.0",
     "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.7.9",
     "react": "18.2.0",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^22.10.1",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.18",
@@ -35,6 +38,7 @@
     "typescript": "5.3.3",
     "typescript-eslint": "^8.11.0",
     "vite": "5.0.10",
-    "vite-tsconfig-paths": "^5.1.3"
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.8"
   }
 }
